<resources>
    <string name="app_name">Podo Market</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">회원가입</string>
    <string name="action_sign_out">로그아웃</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_account_create">회원가입</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_create_account">계정 생성</string>

    <string name="prompt_email">이메일을 입력하세요</string>
    <string name="prompt_password">패스워드를 입력하세요</string>
    <string name="prompt_name">이름을 입력하세요</string>
    <string name="prompt_repassword">비밀번호 재입력하세요</string>
    <string name="prompt_birth">생년월일 입력하세요</string>

    <string name="text_email">이메일</string>
    <string name="text_password">비밀번호</string>
    <string name="text_name">이름</string>
    <string name="text_repassword">재입력</string>
    <string name="text_birth">생년월일</string>
    <string name="do_not_have_account">계정이 아직 없으신가요?</string>
    <string name="enter_user_info">회원정보를 입력해주세요</string>

</resources>
